# msaexp

./: .flake8  .gitignore  .readthedocs.yml  CHANGES.rst  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codecov-reports.yml  draft-pdf.yml  publish-to-pypi.yml  python-package-with-numba.yml  python-package.yml
docs/: conf.py  index.rst  requirements.txt  rtd-pip-requirements
docs/examples/: ceers-z16-msaexp.ipynb  drizzled-nirspec.ipynb  empirical-bar-shadow.ipynb  lookup-table-psf.ipynb  process-rxj2129.ipynb  process-smacs0723.ipynb  spectral-extractions-2024.ipynb  sps-utilities.ipynb
docs/msaexp/: api.rst  install.rst  notes.rst
msaexp/: cloud.py  drizzle.py  ifu.py  msa.py  pipeline.py  pipeline_extended.py  pipeline_fs.py  resample.py  resample_numba.py  sfh.py  slit_combine.py  slit_group.py  spectrum.py  utils.py  version.py
msaexp/cloud/: __init__.py  combine.py  ifu.py  lrs.py  msa.py  redshift.py  utils.py
msaexp/data/: README.md  fix_units.py  fwhm_data.py  h2_linelist.txt  jwst_nirspec_g140h_disp.fits  jwst_nirspec_g140m_disp.fits  jwst_nirspec_g235h_disp.fits  jwst_nirspec_g235m_disp.fits  jwst_nirspec_g395h_disp.fits  jwst_nirspec_g395m_disp.fits  jwst_nirspec_prism_disp.fits  linelist.ecsv  lines_pumped_iron.rst  lines_pyneb_emissivity.rst  lines_supplemental.rst  msaexp.mplstyle  msaexp_badpix_nrs1.yaml  msaexp_badpix_nrs2.yaml  nirspec_exp_psf_lookup.fits  nirspec_msa_transforms.yaml  nirspec_psf_lookup.fits  prism_1_bar_coeffs.yaml  prism_1_bar_coeffs_wave.yaml  prism_2_bar_coeffs.yaml  prism_2_bar_coeffs_wave.yaml  prism_3_bar_coeffs.yaml  prism_3_bar_coeffs_wave.yaml  prism_bar_coeffs.yaml  prism_slit_renormalize.yaml
msaexp/data/detector_gap/: wavelength_range_coeffs_g140m_f070lp.yaml  wavelength_range_coeffs_g140m_f100lp.yaml  wavelength_range_coeffs_g235m_f170lp.yaml  wavelength_range_coeffs_g395m_f290lp.yaml  wavelength_range_coeffs_prism_clear.yaml
msaexp/data/extended_sensitivity/: fix_p330e_s1600a1_sensitivity_CLEAR_PRISM.fits  fix_p330e_s1600a1_sensitivity_F070LP_G140M.fits  fix_p330e_s1600a1_sensitivity_F100LP_G140M.fits  fixed_slit_flat_profile_s1600a1.yaml  (+41 more)
msaexp/deprecated/: utils.py
msaexp/tests/: test_combine.py  test_drizzle.py  test_msa.py  test_numba.py  test_spectra.py  test_utils.py
msaexp/utils/: __init__.py  general.py  lines.py  plotting.py
paper/: paper.bib  paper.md
(+143 files in other folders)
