[tool:pytest]
testpaths = "msaexp/tests"

[metadata]
package_name = msaexp
description = Manual extraction of JWST NIRSpec MSA spectra directly from the telescope exposures
author = G. Brammer
license = MIT
license_files = LICENSE.txt
url = https://github.com/gbrammer/msaexp
edit_on_github = False
github_project = gbrammer/msaexp
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    Source = https://github.com/gbrammer/msaexp
    Tracker = https://github.com/gbrammer/msaexp/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.9
packages = 
    msaexp
    msaexp.data
install_requires = 
    numpy
    cython
    matplotlib
    scipy
    numba
    tqdm
    astropy
    pysiaf
    jwst<=1.16
    astroquery
    grizli
    eazy>=0.6.7
    mastquery
    astro-sedpy>=0.3.0
    scikit-image
include_package_data = True

[options.extras_require]
test =
    pytest>=5.1
    pytest-cov
    flake8
docs =
    sphinx
    sphinx-astropy

[options.package_data]
msaexp.fork =
    *
    assign_wcs/*
msaexp.data =
    *
    msa_sky/*
    extended_sensitivity/*